use Time::Piece->strptime instead of Date::Parse; make dist twitter-specific

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Mojo-WebService
+name    = Mojo-WebService-Twitter
 author  = Dan Book <dbook@cpan.org>
 license = Artistic_2_0
 copyright_holder = Dan Book
